# sire

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.rst  SECURITY.md  pixi.toml  requirements.txt  requirements_bss.txt  requirements_build.txt  requirements_emle.txt  requirements_host.txt  requirements_run.txt  requirements_test.txt  ruff.toml  setup.py  version.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: choose_branch.yaml  devel.yaml  emle.yaml  main.yaml  pr.yaml
actions/: collect_failed.py  generate_recipe.py  test_requirements.py  update_recipe.py  upload_package.py
corelib/: CMakeLists.txt
corelib/src/libs/SireBase/: CMakeLists.txt  array2d.cpp  array2d.h  array2d.hpp  arrayproperty.cpp  arrayproperty.hpp  atexit.cpp  atexit.h  booleanproperty.cpp  booleanproperty.h  centralcache.cpp  centralcache.h  chunkedhash.cpp  chunkedhash.hpp  chunkedvector.cpp  chunkedvector.hpp  combineproperties.cpp  combineproperties.h  console.cpp  console.h  convert_property.hpp  countflops.cpp  countflops.h  cpuid.cpp  cpuid.h  errors.cpp  errors.h  findexe.cpp  findexe.h  generalunitproperty.cpp  generalunitproperty.h  getinstalldir.cpp  getinstalldir.h  globalsharedpointer.cpp  globalsharedpointer.hpp  increment.h  incremint.h  lazyevaluator.cpp  lazyevaluator.h  lengthproperty.cpp  (+69 more)
doc/source/: acknowledgements.rst  blogposts.rst  changelog.rst  conf.py  contributors.rst  features.rst  index.rst  install.rst
docker/sire-generate-wrappers/: Dockerfile_x86  README.md  generate_wrappers
recipes/sire/: LICENSE  bld.bat  build.bat  build.sh  conda_build_config.yaml  template.yaml
src/sire/: CMakeLists.txt  __init__.py  _colname.py  _load.py  _match.py  _measure.py  _parallel.py  _pythonize.py  _thumbsup.py
src/sire/mol/: CMakeLists.txt  __init__.py  _cursor.py  _dynamics.py  _minimisation.py  _perturbation.py  _smiles.py  _trajectory.py  _view.py
src/sire/morph/: CMakeLists.txt  __init__.py  _alchemy.py  _decouple.py  _ghost_atoms.py  _hmr.py  _merge.py  _mutate.py  _pertfile.py  _perturbation.py  _repex.py  _xml.py
src/sire/options/: CMakeLists.txt  __init__.py  _dynamics_options.py  _option.py
src/sire/restraints/: CMakeLists.txt  __init__.py  _restraints.py  _standard_state_correction.py
tests/: conftest.py
tests/base/: test_pagecache.py  test_propertymap.py  test_wrap.py
tests/biosimspace/: test_select.py  test_set_coordinates.py
tests/cas/: test_lambdaschedule.py
tests/convert/: test_emle.py  test_gemmi.py  test_openmm.py  test_openmm_cmap.py  test_openmm_constraints.py  test_openmm_dynamic_constraints.py  test_openmm_force_groups.py  test_openmm_lambda.py  test_openmm_lrc.py  test_openmm_minimise.py  test_openmm_rest2.py  test_openmm_restraints.py  test_openmm_trajectory.py  test_openmm_vsites.py  test_openmm_water.py  test_rdkit.py  test_smarts.py
tests/io/: test_ambercmap.py  test_amberprm.py  test_ambertraj.py  test_ambervels.py  test_ambrst.py  test_ambrst7.py  test_dcd.py  test_gro87.py  test_grotop.py  test_nolabel.py  test_pdb2.py  test_pdbx.py  test_prmtop.py  test_sdf.py  test_string_save.py  test_trajectories.py  test_velocities.py
tests/maths/: test_alignment.py
tests/mm/: test_angles.py  test_bonds.py  test_cljpairs.py  test_dihedrals.py  test_energy.py  test_excluded.py  test_impropers.py  test_index_bonds.py  test_index_internals.py  test_measure.py  test_nullangles.py  test_nullbonds.py
tests/mol/: test_atomprops.py  test_complex_indexing.py  test_cursor.py  test_dynamics.py  test_element.py  test_extract.py  test_find.py  test_join.py  test_make_whole.py  test_mapping.py  test_matcher.py  test_move.py  test_reorder.py  test_rmsd.py  test_trajectory.py
tests/morph/: test_decouple.py  test_hmr.py  test_match.py  test_merge.py  test_pert.py
tests/move/: test_ensemble.py
tests/options/: test_options.py
tests/qm/: test_emle.py  test_qm.py
tests/restraints/: test_angle_dihedral_restraints.py  test_boresch.py  test_morse_potential_restraints.py  test_rmsd_restraints.py  test_standard_state_correction.py
tests/search/: test_property_search.py  test_search_closest.py  test_search_order.py
tests/somd/: example_sim.cfg  test_boresch_corr.py  test_somd.py  test_standardstatecorrection.py
tests/stream/: test_partial_selection.py  test_stream_header.py  test_stream_lever.py
tests/system/: test_add_atoms.py  test_forcefieldinfo.py  test_shared_properties.py
tests/units/: test_generalunit.py  test_parse_unit.py  test_parse_vector.py  test_pickling.py  test_temperature.py
tests/vol/: test_triclinic.py
wrapper/: CMakeLists.txt  __init__.py
wrapper/Analysis/: Bennetts.pypp.cpp  Bennetts.pypp.hpp  BennettsRatios.pypp.cpp  BennettsRatios.pypp.hpp  ComponentGradients.pypp.cpp  ComponentGradients.pypp.hpp  (+20 more)
wrapper/Convert/: CMakeLists.txt  __init__.py
wrapper/Convert/SireGemmi/: CMakeLists.txt  _SireGemmi.main.cpp  sire_gemmi.cpp  sire_gemmi.h
wrapper/Convert/SireOpenMM/: CMakeAutogenFile.txt  CMakeLists.txt  EMLECallback.pypp.cpp  EMLECallback.pypp.hpp  EMLEEngine.pypp.cpp  EMLEEngine.pypp.hpp  EMLEForce.pypp.cpp  EMLEForce.pypp.hpp  LambdaLever.pypp.cpp  LambdaLever.pypp.hpp  NullQMEngine.pypp.cpp  NullQMEngine.pypp.hpp  OpenMMMetaData.pypp.cpp  OpenMMMetaData.pypp.hpp  PerturbableOpenMMMolecule.pypp.cpp  PerturbableOpenMMMolecule.pypp.hpp  PyQMCallback.pypp.cpp  PyQMCallback.pypp.hpp  PyQMEngine.pypp.cpp  PyQMEngine.pypp.hpp  PyQMForce.pypp.cpp  PyQMForce.pypp.hpp  QMEngine.pypp.cpp  QMEngine.pypp.hpp  QMForce.pypp.cpp  QMForce.pypp.hpp  README_WRAPPERS.txt  SireOpenMM_properties.cpp  SireOpenMM_properties.h  SireOpenMM_registrars.cpp  SireOpenMM_registrars.h  TorchQMEngine.pypp.cpp  TorchQMEngine.pypp.hpp  TorchQMForce.pypp.cpp  TorchQMForce.pypp.hpp  _SireOpenMM.main.cpp  _SireOpenMM_free_functions.pypp.cpp  _SireOpenMM_free_functions.pypp.hpp  _perturbablemol.py  _sommcontext.py  (+28 more)
wrapper/Convert/SireOpenMM/lbgfs/: arithmetic_optimised.h  lbfgs.cpp  lbfgs.h
wrapper/Convert/SireRDKit/: CMakeLists.txt  _SireRDKit.main.cpp  sire_rdkit.cpp  sire_rdkit.h
(+3413 files in other folders)
